# qrcodes_generator

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  qr_gen.py
static/: styles.css
templates/: index.html
